crates/haneul/tests/snapshots/shell_tests__explicit_implicits__modern_cannot_use_legacy_name.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/explicit_implicits/modern_cannot_use_legacy_name.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that building a package that has explicit deps on legacy system names errors
haneul move --client.config $CONFIG build -p modern_using_legacy_name

----- results -----
success: false
exit_code: 1
----- stdout -----
Error while loading dependency .: Dependency `DeepBook` is a legacy system name and cannot be used. See https://docs.haneul.io/guides/developer/haneul-101/move-package-management#system-dependencies

----- stderr -----
