crates/haneul/tests/snapshots/shell_tests__explicit_implicits__modern_depending_on_legacy.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/explicit_implicits/modern_depending_on_legacy.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that building a package that depends on a legacy that has explicit System deps can build successfully 
haneul move --client.config $CONFIG build -p modern_depending_on_legacy

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
INCLUDING DEPENDENCY MoveStdlib
INCLUDING DEPENDENCY Haneul
INCLUDING DEPENDENCY legacy_can_use_legacy
BUILDING modern_depending_on_legacy
